--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "chalk": "^5.6.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
