--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.4.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
+    "stripe": "^20.0.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
