--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nanoid": "^5.1.6",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
+    "rate-limit-mongo": "^2.3.2",
     "stripe": "^20.0.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
