--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "nodemailer": "^7.0.6",
     "rate-limit-mongo": "^2.3.2",
     "stripe": "^20.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
@@ -43,6 +45,8 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.6.1",
     "@types/nodemailer": "^7.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
